# SysYCompiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_and_build.sh  config.toml
appends/lab0/: testfile1.sy  testfile2.sy  testfile3.sy  testfile4.sy  testfile5.sy
debug/: lexer_test  lexer_test.l  parsercp.y
docs/: lab1.md  lab4.md  optimization.md  rdparser.md  zeroIR.md
src/: common.hpp  main.cpp
src/analysis/: cfg_builder.cpp  control_flow.cpp  control_flow.hpp
src/ast/: tree.cpp  tree.hpp
src/codegen/: asm.hpp  asm_emitter.cpp  inst_selector.cpp  inst_selector.hpp  reg_allocator.cpp
src/ir/: ir.hpp  ir_translator.cpp  ir_translator.hpp
src/lexer/: lexer.l
src/parser/: parser.y
src/rd/: lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  token.hpp
src/semantic/: symbol_table.cpp  symbol_table.hpp  type.cpp  type.hpp  type_checker.cpp  type_checker.hpp
